--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     //database
-    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    // implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    // implementation 'com.h2database:h2'
-    // runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 // =========================== spring boot jar setting ===========================
