--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     //database
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    implementation 'org.ahocorasick:ahocorasick:0.4.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 // =========================== spring boot jar setting ===========================
