--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
 
       ## 원격 환경에 코드 복사ja
@@ -47,7 +47,7 @@ jobs:
             touch  /home/ubuntu/app/profanity-filter-api/src/main/resources/application-prod.yml
             echo "${{ secrets.APPLICATION_PROD }}" | base64 --decode > src/main/resources/application-prod.yml  
             chmod +x gradlew
-            ./gradlew build
+            ./gradlew build -x test
 
       ## 개발 도커 실행
       - name: docker compose up
