--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,9 @@ spring:
   config:
     activate:
       on-profile: local,prod
+
+server:
+  servlet:
+    encoding:
+      charset: UTF-8 # 서버 인코딩 설정
+      force: true # 서버 인코딩 강제 설정
