feat: domain FilterEvent frame implement

--- a/module-domain/build.gradle
+++ b/module-domain/build.gradle
@@ -8,6 +8,9 @@ dependencies {
 
     // ahocorasick
     implementation 'org.ahocorasick:ahocorasick:0.6.3'
+
+    //UUID v7
+    implementation 'com.github.f4b6a3:uuid-creator:5.3.3'
 }
 
 tasks.register("prepareKotlinBuildScriptModel") {}
