--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -7,6 +7,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.register("prepareKotlinBuildScriptModel") {}
