chore: update github action

--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -24,6 +24,7 @@ jobs:
           switches: -avzr --delete
           remote_path: /home/ubuntu/app/profanity-filter-api
           remote_host: ${{ secrets.DEV_SERVER_IP }}
+          remote_port:  ${{ secrets.DEV_SERVER_PORT }}
           remote_user: ubuntu
           remote_key: ${{ secrets.DEV_SSH_KEY }}
 
@@ -32,6 +33,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_IP }}
+          port: ${{ secrets.DEV_SERVER_PORT }}
           username: ubuntu
           key: ${{ secrets.DEV_SSH_KEY }}
           script: |
@@ -50,6 +52,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_IP }}
+          port: ${{ secrets.DEV_SERVER_PORT }}
           username: ubuntu
           key: ${{ secrets.DEV_SSH_KEY }}
           script: |
