--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = 'profanity-filter-api'
 include('module-core')
 include('module-domain')
 include('module-api')
+include('module-batch')
