chore: major structural improvements for a purer structure.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - TZ=Asia/Seoul
+    env_file: .env
     command: [ "java", "-jar", "/app.jar" ]
 
   profanity-filter-api-blue-2:
