--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.9'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.4.0'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 configurations {
@@ -19,8 +19,8 @@ allprojects {
     }
 
     java {
-        sourceCompatibility = '17'
-        targetCompatibility = '17'
+        sourceCompatibility = '21'
+        targetCompatibility = '21'
     }
 }
 
@@ -30,30 +30,26 @@ subprojects {
     apply plugin: 'io.spring.dependency-management'
 
     dependencies {
-        implementation 'org.apache.commons:commons-lang3:3.12.0'
+        // default spring boot dependencies
+        implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+        implementation 'org.springframework.boot:spring-boot-configuration-processor'
+
+        // default  utilities
+        implementation 'org.apache.commons:commons-lang3:3.12.0'
+        implementation 'com.google.guava:guava:31.1-jre'
+
+        // default lombok
+        implementation 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
     }
+
 
     bootJar.enabled = false
     jar.enabled = true
-
-    tasks.named('test') { // 테스트할 때 junit5로 하겠다는 의미
-        useJUnitPlatform()
-    }
+    tasks.named('test') { useJUnitPlatform() }
 }
 
-bootJar {
-    enabled = false
-}
-jar {
-    enabled = true
-}
-
-springBoot {
-    mainClass = 'app.ProfanityFilterApplication'
-}
-
-tasks.named("bootRun") {
-    mainClass = 'app.ProfanityFilterApplication'
-}
+bootJar.enabled = false
+jar.enabled = true
