chore: update deploy config

--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -3,10 +3,10 @@ name: deploy workflow
 on:
   push:
     branches:
-      - deploy
+      - release
   pull_request:
     branches:
-      - deploy
+      - release
     types:
       - closed
 
