--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -21,48 +21,44 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: JDK 21 설정
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
 
-      - name: copy project
+      - name: 프로젝트 복사
         uses: burnett01/rsync-deployments@6.0.0
         with:
           switches: -avzr --delete
           remote_path: /home/ubuntu/app/profanity-filter-api
           remote_host: ${{ secrets.DEV_SERVER_IP }}
           remote_port: ${{ secrets.DEV_SERVER_PORT }}
-          remote_user: ubuntu
+          remote_user: ${{ secrets.DEV_SERVER_USERNAME }}
           remote_key: ${{ secrets.DEV_SSH_KEY }}
 
       ## deploy setup
-      - name: deploy setup and gradle build
+      - name: 프로젝트 환경 변수 설정 및 빌드
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_IP }}
           port: ${{ secrets.DEV_SERVER_PORT }}
-          username: ubuntu
+          username: ${{ secrets.DEV_SERVER_USERNAME }}
           key: ${{ secrets.DEV_SSH_KEY }}
           script: |
             cd /home/ubuntu/app/profanity-filter-api
-            touch  /home/ubuntu/app/profanity-filter-api/module-api/src/main/resources/application-prod.yml
-            touch  /home/ubuntu/app/profanity-filter-api/module-core/src/main/resources/application-prod.yml
-            touch  /home/ubuntu/app/profanity-filter-api/module-domain/src/main/resources/application-prod.yml
-            echo "${{ secrets.APPLICATION_PROD }}" | base64 --decode > module-api/src/main/resources/application-prod.yml  
-            echo "${{ secrets.APPLICATION_PROD }}" | base64 --decode > module-core/src/main/resources/application-prod.yml  
-            echo "${{ secrets.APPLICATION_PROD }}" | base64 --decode > module-domain/src/main/resources/application-prod.yml  
+            touch  /home/ubuntu/app/profanity-filter-api/.env
+            echo "${{ secrets.ENV }}" > /home/ubuntu/app/profanity-filter-api/.env  
             chmod +x gradlew
-            ./gradlew build -x test
+            ./gradlew clean build -x test
 
         ## deploy script
-      - name: Run deploy script
+      - name: 배포 스크립트 실행
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.DEV_SERVER_IP }}
           port: ${{ secrets.DEV_SERVER_PORT }}
-          username: ubuntu
+          username: ${{ secrets.DEV_SERVER_USERNAME }}
           key: ${{ secrets.DEV_SSH_KEY }}
           script: |
             cd /home/ubuntu/app/profanity-filter-api/script
