feat: create an object that issues an api key

--- a/profanity-domain/src/main/resources/application-domain.yml
+++ b/profanity-domain/src/main/resources/application-domain.yml
@@ -1,2 +1,3 @@
-domain:
-  value: domain-value
+api-key:
+  keycode: ${server.keycode:keycode-default}
+  algorithm: ${server.keycode.algorithm:SHA-256}
