feat: pre-implementation of redis-related properties to be applied later

--- a/profanity-api/build.gradle
+++ b/profanity-api/build.gradle
@@ -2,7 +2,9 @@ bootJar.enabled = true
 jar.enabled = false
 
 dependencies {
-    runtimeOnly runtimeOnly(project(':profanity-storage:rdb'))
+    runtimeOnly(project(':profanity-storage:redis'))
+    runtimeOnly(project(':profanity-storage:rdb'))
+
     implementation project(':profanity-core')
     implementation project(':profanity-domain')
 
