Pr/16 api key (#19)
Co-authored-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/main/resources/application.yml
+++ b/profanity-api/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 server:
   port: ${SERVER_PORT:8080}
+  forward-headers-strategy: native
 
 spring:
   profiles:
     include:
       - rdb
+      - redis
       - domain
       - core
 
