chore: improve deployment workflow trigger conditions

--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -1,9 +1,6 @@
 name: deploy workflow
 
 on:
-  push:
-    branches:
-      - release
   pull_request:
     branches:
       - release
@@ -16,6 +13,7 @@ concurrency:
 
 jobs:
   build-and-push:
+    if: github.event.pull_request.merged == true &&  startsWith(github.event.pull_request.head.ref, 'release-')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
