--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ subprojects {
     tasks.named('test') { useJUnitPlatform() }
 
     test {
-        outputs.upToDateWhen { false }  // 항상 테스트 실행
+        outputs.upToDateWhen { false }
         useJUnitPlatform()
         testLogging {
             events "passed", "skipped", "failed"
