feat : add more api rest docs test
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -2,8 +2,7 @@ name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
   push:
-    branches: [ "pr/28-rest-docs" ]
-
+    branches: [ "release","pr/28-rest-docs" ]
   workflow_dispatch:
 
 permissions:
