feat: change directory standards
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -36,9 +36,8 @@ jobs:
       - name: build with jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./profanity-api/build/docs
+          source: ./docs
           destination: ./_site
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
