--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   build-and-push:
-    if: github.event.pull_request.merged == true &&  startsWith(github.event.pull_request.head.ref, 'release-')
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
