--- a/profanity-api/src/main/resources/application.yml
+++ b/profanity-api/src/main/resources/application.yml
@@ -21,4 +21,4 @@ management:
     web:
       exposure:
         include: [ "health", "prometheus" ]
-      base-path: /system/actuator
+      base-path: ${ACTUATOR_PATH:/health}
