--- a/profanity-api/src/main/resources/application.yml
+++ b/profanity-api/src/main/resources/application.yml
@@ -15,6 +15,16 @@ spring:
       - redis
       - domain
       - core
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME:email@gmail.com}
+    password: ${MAIL_PASSWORD:password}
+    properties:
+      mail.smtp.debug: true
+      mail.smtp.connectiontimeout: 1000
+      mail.starttls.enable: true
+      mail.smtp.auth: true
 
 management:
   endpoints:
