feat: email sender implements
Signed-off-by: hgkim <hgkim@openrd.com>

--- a/profanity-api/src/main/resources/application.yml
+++ b/profanity-api/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME:email@gmail.com}
-    password: ${MAIL_PASSWORD:password}
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
     properties:
       mail.smtp.debug: true
       mail.smtp.connectiontimeout: 1000
