--- a/profanity-api/build.gradle
+++ b/profanity-api/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
 
     // monitoring
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
