--- a/profanity-storage/redis/src/main/resources/application-redis.yml
+++ b/profanity-storage/redis/src/main/resources/application-redis.yml
@@ -1,7 +1,8 @@
 redis:
-  cluster:
-    master:
-      - ${REDIS_MASTER_HOST:localhost}:${REDIS_MASTER_PORT:16379}
-    replica:
-      - ${REDIS_REPLICA_HOST:localhost}:${REDIS_REPLICA_PORT:16380}
-    password: ${REDIS_PASSWORD:demo-mutil-redis-cluster}
+  host: ${REDIS_MAIN_HOST:localhost}
+  main:
+    port: ${REDIS_MAIN_PORT:6379}
+  sub:
+    port:
+      - ${REDIS_SUB_PORT_A:6380}
+      - ${REDIS_SUB_PORT_B:6381}
