fix: update README and build.gradle dependencies; refactor JpaClientsRepository
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/profanity-api/build.gradle
+++ b/profanity-api/build.gradle
@@ -18,7 +18,7 @@ configurations {
 }
 
 dependencies {
-    runtimeOnly project(':profanity-storage:rdb')
+    implementation project(':profanity-storage:rdb')
     implementation project(':profanity-storage:redis')
     implementation project(':profanity-core')
     implementation project(':profanity-domain')
