chore: comment out pull request trigger settings in release.yaml
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,9 @@
 name: Release
 on:
   pull_request:
-    branches:
-      - release
-    types: [ closed ]
+#    branches:
+#      - release
+#    types: [ closed ]
 jobs:
   build:
     runs-on: ubuntu-latest
